src/components/bottom-bar.scss
.amountOfRain {
  width: 100px;
}

.stormDuration {
  width: 80px;

  .stormDurationSelect {
    text-align: center;
    margin-top: 9px;

    .selectElement {
      width: 70px;
    }

    &.disabled {
      pointer-events: none;
      opacity: 0.5;
    }
  }
}

.startingWaterLevel {
  width: 80px;
}

.leveesCount {
  position: absolute;
  top: 4px;
  right: 5px;
  width: 32px;
  height: 14px;
  font-size: 12px;
  background: #dfdfdf;
  border-radius: 7px;
  text-align: center;
  z-index: 1;
  pointer-events: none;
}

.timeSlider {
  width: 280px;
}

